--- a/my.css
+++ b/my.css
@@ -71,6 +71,8 @@ padding: 80px;
 
 .goat-h1{
 margin-bottom: 0;
+font-size: 38px;
+font-weight: 600;
 }
 
 .goat-p{
@@ -81,7 +83,76 @@ background-clip: text;
 font-size: 80px;
 font-weight: 800;
 margin-top: 0;
+margin-bottom: 0;
 }
 
+.h6{
+text-align: left;
+margin: 50px 200px;
+font-size: 17px;
+font-weight: 500;
+color: #534C64;
+}
 
+.Sign-In , .Go-Rogue{
+padding: 21px 40px;
+color: #FFF;
+font-size: 20px;
+font-weight: 600;
+border-radius: 48px;
+border:none;
 
+}
+.Sign-In{
+background-color: #FF42A5;
+}
+.Go-Rogue{
+    background-color:#4EC5F7;
+}
+
+.we-are-gamer-img{
+    background-color: rgba(255, 66, 165, 0.03) ;
+    display: flex;
+    justify-content: space-between;
+   padding:80px;
+    
+}
+.we-are-gamer{
+text-align: right;
+}
+
+.Our-purpose-h3 , .Our-purpose-h1 ,.Our-purpose-p{
+    color: #534C64;
+}
+
+.Our-purpose-h3{
+font-size: 24px;
+font-weight: 500;
+}
+.Our-purpose-h1{
+font-size: 32px;
+font-weight: 700;
+}
+
+.we-are-gamer-h1{
+font-size: 48px;
+font-weight: 700;
+background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.Online-Games-Funny-Videos{
+    text-align: center;
+}
+.Online-Games-Funny-Videos img{
+    width:242px;
+    height: 300px;
+    padding: 20px;
+
+}
+.Online-Games-Funny-Videos img:hover{
+    background:rgba(0, 0, 0, 0.60)
+
+}
