--- a/my.css
+++ b/my.css
@@ -302,8 +302,94 @@ font-weight: 100;
     }
     .main{
         display: grid;
-        grid-template-areas: "goat-img"
-                            "goat-h1"
-                            ;
+
+    }
+
+    .images{
+        flex-direction: column;
+    }
+    .goat-img img{
+        width: 400px;
+        height: 350px;
+    }
+    .we-are-gamer-img{
+        flex-direction: column;
+    }
+    .we-are-gamer-img img{
+        width: 350px;
+        height: 250px;
+        margin-left: -50px;
+    }
+
+    .Play-Instantly{
+        flex-direction: column;
+        text-align: center;
+        margin: 5px;
+        align-items: center;
+    }
+    .goat-h1 , .we-are-gamer-h1 {
+        margin-top: 0;
+        text-align: center;
+        font-size: 20px;
+    }
+    .Our-purpose-p{
+        text-align: center;
+        font-size: 12px;
+    }
+
+    .Sign-In{
+        margin:20px 25px;
+    }
+    .Our-purpose-h3{
+        text-align: center;
+        font-size: 20px;
+    }
+    .Our-purpose-h1{
+        text-align: center;
+        font-size: 15px;
+    }
+    .Play-Instantly img{
+        margin-top: auto;
+        width: 300px;
+        height: 400px;
+    }
+    .side-pic img{
+        width: 180px;
+        height: 220px;
+        margin-left: 250px;
+        
+    }
+
+    .icon-bar{
+   
+      
+        display:grid;
+        grid-template-columns:repeat(3,1fr); 
+        grid-template-rows:repeat(3,1fr); 
+        padding: 100px;
+        margin-top: -200px;
+        margin-left: -100px;
+       
+    }
+
+    .i{
+        background-color: white;
+        border: 2px solid white;
+        
+        border-radius: 50px;
+        width: 100px;
+        height: 50px;
+        align-items: center;
+        color:black;
+        margin-left: 10px;
+       
+    }
+
+    .icon-bar img{
+        width: 40px;
+        height: 40px;
+    }
+    .icon-bar p{
+        font-size: 10px;
     }
 }
