--- a/my.css
+++ b/my.css
@@ -392,4 +392,21 @@ font-weight: 100;
     .icon-bar p{
         font-size: 10px;
     }
+
+
+    .goat{
+        background-image: url('Group\ 14.png');
+        text-align: center;
+        width: 400px;
+        height: 410px;
+        padding: 5px;
+    }
+
+    .h6{
+        text-align: left;
+        margin: 20px 100px;
+        font-size: 17px;
+        font-weight: 500;
+        color: #534C64;
+    }
 }
