--- a/my.css
+++ b/my.css
@@ -470,7 +470,7 @@ font-weight: 100;
         flex-direction: column;
      }
 
-     .n{
+    .n{
         flex-direction: column;
     }
     .main{
@@ -479,34 +479,32 @@ font-weight: 100;
     .goat{
         
         text-align: center;
-        width: 640px;
+        max-width: 590px;
         height: 510px;
         padding: 80px;
-        }
+        margin: 0 auto;
+    }
+    .goat-img img{
+        width: 700px;
+    }
     .we-are-gamer-img{
-        
-        flex-direction: column;
-       
-        width: 640px;
-            
+        flex-direction: column;    
+        width: 590px;           
     }
     .we-are-gamer{
         text-align: center;
-        }
+    }
     .images{
         display:grid;
         grid-template-columns:repeat(2,1fr); 
-        margin: 5px 5px 5px 100px;
-    
+        margin: 5px 5px 5px 100px;    
     }
-
     .Play-Instantly{
         flex-direction: column;
         text-align: center;
         align-items: center;
         margin:0px 5px 5px 5px;
     }
-
     .Play-Instantly img{
       
         width: 400px;
@@ -515,43 +513,34 @@ font-weight: 100;
     .side-pic img{
         width: 200px;
         height: 240px;
-        margin-left: 180px;
-        
+        margin-left: 180px;        
     }
-
     .icon-bar{
-   
-      
         display:grid;
         grid-template-columns:repeat(3,1fr); 
         grid-template-rows:repeat(3,1fr); 
-   
         margin-top: -200px;
-        width:600px;
-       
+        width:550px;     
     }
-
     .i{
         background-color: white;
         border: 2px solid white;
         border-radius: 50px;
-        width: 200px;
+        width: 180px;
         height:70px;
         align-items: center;
         color:black;
-        margin-left: 5px;
-       
+        margin-left: 5px;       
     }
-
     .icon-bar img{
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
     }
     .icon-bar p{
         font-size: 15px;
     }
     .footer{
-    width:800px;
+    width:750px;
     }
     .zero{
         align-items: center;
@@ -563,8 +552,7 @@ font-weight: 100;
            grid-template-columns:repeat(3,1fr); 
            padding-left:120px ;
            gap: 20px;
-           margin-right: 20px;
-           
+           margin-right: 20px;           
     }   
     .third{
     padding:20px 20px 20px 20px;
@@ -575,8 +563,7 @@ font-weight: 100;
     gap:20px;
     }
     
-    .forth{
-        
+    .forth{       
         padding:20px 20px 20px 20px;
         align-items: center;
         text-align: center;
@@ -585,12 +572,10 @@ font-weight: 100;
     }
     
     .fifth{
-       padding-left:200px ;
-      
+       padding-left:200px ;      
        gap: 20px;
        color:white;
-       margin: 50px;
-       
+       margin: 50px;       
        margin-bottom: 200px;
        }
         
