--- a/my.css
+++ b/my.css
@@ -278,47 +278,47 @@ font-weight: 100;
    }
 
 
-@media screen and (max-width:682px)
+@media screen and (max-width:425px)
 {
     .header{
        flex-direction: column;
+      
     }
-    .nav{
-       
+    .nav{       
         flex-direction: column;
     }
-    nav>ul{
-        flex-direction: column;
-        align-items: center ;
+    nav > ul{
+        flex-direction: column;      
     }
     .n{
         flex-direction: column;
+        display: grid;
+        grid-template-columns:1fr; 
     }
-    .main{
-        flex-direction: column;
-        
-
-    }
-
+  
     .images{
         flex-direction: column;
     }
-    .goat-img img{
+    .goat-img-img{
         width: 400px;
-        height: 430px;
-        
+        grid-area: goat-img-img;  
     }
-
     .goat{
         background-image: url('Group\ 14.png');
         text-align: center;
         width: 400px;
-        height: 430px;
+        height: 400px;
         padding: 5px;
-       
-
+        margin-right: 500px;
+        grid-area: goat; 
     }
-
+    .main{
+        flex-direction: column;     
+        display: grid;
+        grid-template-areas: 
+        "goat-img-img"
+        "goat"; 
+    }
     .h6{
         text-align: left;
         margin: 20px 100px;
@@ -374,9 +374,7 @@ font-weight: 100;
         
     }
 
-    .icon-bar{
-   
-      
+    .icon-bar{      
         display:grid;
         grid-template-columns:repeat(3,1fr); 
         grid-template-rows:repeat(3,1fr); 
@@ -464,16 +462,13 @@ font-weight: 100;
 
 
 
-@media screen and (min-width:682px) and (max-width:768px){
+@media screen and (min-width:426px) and (max-width:762px){
 
     .header{
         flex-direction: column;
      }
 
     .n{
-        flex-direction: column;
-    }
-    .main{
         flex-direction: column;
     }
     .goat{
@@ -483,9 +478,18 @@ font-weight: 100;
         height: 510px;
         padding: 80px;
         margin: 0 auto;
+        grid-area: goat;
     }
-    .goat-img img{
+    .goat-img-img{
         width: 700px;
+        grid-area: goat-img-img;
+    }
+    .main{
+        flex-direction: column;
+        display: grid;
+        grid-template-areas: 
+        "goat-img-img"
+        "goat"; 
     }
     .we-are-gamer-img{
         flex-direction: column;    
